--- a/terrform-planner.yml
+++ b/terrform-planner.yml
@@ -3,6 +3,31 @@ Name: "Terraform-planner"
 on:
   push:
     branches:
-    - planner
+    - master
     #this will have the basics of where to push the code too
-  
+
+jobs: 
+  terraform:
+    name: "Terraform"
+    runs-on: ubuntu-latest
+    env: 
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRETE_ID }}
+      AWS_REGION: 'us-east-1'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Terraform 
+        uses: hashicorp/setup-terraform@v1
+      - name: Terraform Init
+        id: Init 
+        run: terraforn init 
+      - name: Terraform Plan 
+        id: Plan
+        if: hithub.event_name == "push"
+        run: terraform plan -no-color 
+        
+
+
+
+
